# final_os_system

./: .gitignore  README.md  fs.h
fs_ui/: __init__.py  config.py  main.py  test_buttons.py  test_lambda.py  test_proc.py  test_proc2.py
fs_ui/core/: __init__.py  fs_commands.py  fs_process.py  sync_parser.py
fs_ui/ui/: __init__.py  heatmap_panel.py  main_window.py  terminal_panel.py  tree_panel.py
os_system/: CMakeLists.txt
os_system/build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  block_alloc_test1.vcxproj  block_alloc_test1.vcxproj.filters  block_map_test1.vcxproj  block_map_test1.vcxproj.filters  cache_test1.vcxproj  cache_test1.vcxproj.filters  cmake_install.cmake  debug_test1.vcxproj  debug_test1.vcxproj.filters  fsck_test1.vcxproj  fsck_test1.vcxproj.filters  journal_test1.vcxproj  journal_test1.vcxproj.filters  myfs_core.vcxproj  myfs_core.vcxproj.filters  myfs_stage1.sln  physical_api_test1.vcxproj  physical_api_test1.vcxproj.filters  physical_stage2_full_test.vcxproj  physical_stage2_full_test.vcxproj.filters  physical_test1.vcxproj  physical_test1.vcxproj.filters  raw_file_test1.vcxproj  raw_file_test1.vcxproj.filters  vfs_upper.vcxproj  vfs_upper.vcxproj.filters
os_system/docs/: data_structures.md
os_system/include/: block_alloc.h  block_map.h  cache.h  common.h  config.h  debug.h  disk.h  error.h  fsck.h  inode.h  journal.h  layout.h  mount.h  physical_api.h  raw_file.h  superblock.h  sync.h  type.h
os_system/src/: vfs_upper.cpp
os_system/src/core/: block_alloc.cpp  block_map.cpp  cache.cpp  debug.cpp  disk.cpp  fsck.cpp  inode.cpp  journal.cpp  layout.cpp  mount.cpp  physical_api.cpp  raw_file.cpp  superblock.cpp  sync.cpp
os_system/src/tests/: block_alloc_test1.cpp  block_map_test1.cpp  cache_test1.cpp  debug_test1.cpp  fsck_test1.cpp  journal_test1.cpp  physical_api_test1.cpp  physical_stage2_full_test.cpp  physical_test1.cpp  raw_file_test1.cpp
os_system/src/util/: error.cpp
